<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="60dp"
    android:contentDescription="@string/game_scrollview_description">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgSelectedCoin"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/game_selectedCoin_description"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgCancel"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contentDescription="@string/game_CancelBet_description"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toRightOf="@id/imgSelectedCoin"
            app:layout_constraintRight_toLeftOf="@id/imgCoinDeal"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_cancel_24" />

        <ImageView
            android:id="@+id/imgCoinDeal"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contentDescription="@string/game_coinDeal_description"
            android:scaleType="fitXY"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_coin_deal" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</HorizontalScrollView>